--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@
     </div>
     <p style="font-size:1.1rem; color:#b07080; font-style:italic; margin-bottom:6px;">Para mi amor...</p>
     <p style="font-family:inherit; font-size:2rem; font-weight:700; color:#e8476a; margin-bottom:20px;">Kerlly Victoria💕</p>
+    <span class="emoji-big" id="qEmoji">💭</span>
     <h1 id="qTitle">Cargando...</h1>
     <p class="subtitle" id="qSub"></p>
     <div class="options" id="optionsBox"></div>
